# test-ai-2025

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  pytest.ini  ruff.toml
.github/: copilot-instructions.md
.github/chatmodes/: Feature Planner.chatmode.md  PyTest Setup.chatmode.md  PythonMetadata.chatmode.md  Readme Creator.chatmode.md  Ticket Checker.chatmode.md
aiss/: README.md  __init__.py  check_model.py  run_queries.py  utils.py
aiss/models/: README.md  __init__.py  find_model.py  movie_model.py  protocols.py  shared.py  show_model.py
aiss/models/games/: README.md  __init__.py  _base.py  action_adventure_model.py  horror_survival_model.py  mmo_online_model.py  puzzle_strategy_model.py  role_playing_model.py  shooter_model.py  simulation_sandbox_model.py  sports_racing_model.py
aiss/models/movies/: README.md  __init__.py  _base.py  action_adventure_model.py  comedy_model.py  documentary_biographical_model.py  drama_model.py  fantasy_science_fiction_model.py  horror_model.py  romance_model.py  thriller_mystery_crime_model.py
aiss/models/shows/: README.md  (+12 more)
aiss/openai_direct/: README.md  __init__.py  openai_json.py  openai_parsed.py  openai_text.py  wikipedia_tool.py
tests/: conftest.py  test_check_model.py  test_main.py  test_models.py  test_models_more.py  test_openai_direct.py  test_protocol_contract.py  test_run_queries.py  test_utils.py
tests/models/: test_base_classes.py  test_shared.py
tests/openai_direct/: test_openai_json.py  test_openai_parsed.py  test_openai_text.py  test_wikipedia_tool.py
(+30 files in other folders)
